fixed text align to center on projects

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -29,6 +29,7 @@
 }
 
 .Project-name {
+  text-align: center;
   margin-top: 0.25rem;
 }
 
